Project almost done

--- a/hotelapp-backend/src/main/resources/application.properties
+++ b/hotelapp-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=hotelapp
+spring.datasource.url=jdbc:oracle:thin:@dbmanage.lab.ii.agh.edu.pl:1521:DBMANAGE
+spring.datasource.username=BD_411400
+spring.datasource.password=bazyDanych123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
